Fix Redis deserialization error for cached expense lists
Java 16+ Stream.toList() returns an immutable ImmutableCollections$List0/N.
GenericJackson2JsonRedisSerializer (NON_FINAL typing) cannot wrap private JDK
internal classes with type info, so empty results serialize as bare []. On read,
Jackson expects ["ClassName", data] but finds END_ARRAY and throws. Switching to
Collectors.toList() returns ArrayList which Jackson handles correctly.